<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/enter_url_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/url_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:backgroundTint="#FFFFFF"
                android:hint="url을 입력하세요."
                android:imeOptions="actionGo"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="확인" />

    </LinearLayout>
</layout>
